fix scrollbar and comments

--- a/inktrinket_v2/core.css
+++ b/inktrinket_v2/core.css
@@ -5,6 +5,7 @@
 a{text-decoration: none;}
 a:link,a:hover,a:visited,a:invalid{color: var(--clr-darkest);}
 nav ul{list-style: none;}
+::-webkit-scrollbar{display: none;}
 
 
 
